--- a/FootballScoreClient/FootballScoreClient/src/app/features/navbar/navbar.component.html
+++ b/FootballScoreClient/FootballScoreClient/src/app/features/navbar/navbar.component.html
@@ -1,10 +1,15 @@
 <div class="main">
+    
     <div>
-        Logga
+        <nav>
+            <a routerLink="/home">Home</a>
+        </nav>
     </div>
-
+    
     <div>
-        Scores
+        <nav>
+            <a routerLink="/leagues">Leagues</a>
+        </nav>
     </div>
 
     <div>
