--- a/FootballScoreClient/FootballScoreClient/src/app/pages/home-page/home-page.component.html
+++ b/FootballScoreClient/FootballScoreClient/src/app/pages/home-page/home-page.component.html
@@ -1,30 +1,11 @@
 <h1>Today's Games</h1>
 
 <div *ngIf="response$ | async as matchResponse; else loading">
-    <div *ngFor="let match of matchResponse.matches">
-      <div class="match">
-        
-        <h3>{{ match.competition.name }} - Matchday {{ match.matchday }}</h3>
-        <p>{{ match.area.name }} | {{ match.season.startDate | date:'yyyy' }} - {{ match.season.endDate | date:'yyyy' }}</p>
-        <p><strong>{{ match.homeTeam.name }}</strong> vs <strong>{{ match.awayTeam.name }}</strong></p>
-        <p>Status: {{ match.status }}</p>
-        <p>Match Time: {{ match.utcDate | date:'short' }}</p>
-  
-        <div class="score">
-          <span *ngIf="match.score.fullTime.home !== null">{{ match.score.fullTime.home }} - {{ match.score.fullTime.away }}</span>
-          <span *ngIf="match.score.fullTime.home === null"></span>
-        </div>
-  
-        <div class="team-crests">
-          <img [src]="match.homeTeam.crest" alt="{{ match.homeTeam.name }}" width="30">
-          <img [src]="match.awayTeam.crest" alt="{{ match.awayTeam.name }}" width="30">
-        </div>
-      </div>
-      <hr>
-    </div>
-  </div>
-  
-  <ng-template #loading>
-    <p>Loading matches...</p>
-  </ng-template>
-  
+  <app-match-list [matches]="matchResponse.matches">
+
+  </app-match-list>
+</div>
+
+<ng-template #loading>
+  <p>Loading matches...</p>
+</ng-template>
