--- a/FootballScoreClient/FootballScoreClient/src/app/pages/league-details/league-details.component.html
+++ b/FootballScoreClient/FootballScoreClient/src/app/pages/league-details/league-details.component.html
@@ -10,82 +10,36 @@
 <!-- Section for Today's Matches -->
 <div *ngIf="selectedCategory === 'today'">
     <div *ngIf="todaysMatches$ | async as matchResponse; else loading">
-        <div *ngFor="let match of matchResponse">
-            <div class="match">
-                <h3>{{ match.competition.name }} - Matchday {{ match.matchday }}</h3>
-                <p>{{ match.area.name }} | {{ match.season.startDate | date:'yyyy' }} - {{ match.season.endDate |
-                    date:'yyyy' }}</p>
-                <p><strong>{{ match.homeTeam.name }}</strong> vs <strong>{{ match.awayTeam.name }}</strong></p>
-                <p>Status: {{ match.status }}</p>
-                <p>Match Time: {{ match.utcDate | date:'short' }}</p>
+        <app-match-list [matches]="matchResponse">
 
-                <div class="score">
-                    <span *ngIf="match.score.fullTime.home !== null">{{ match.score.fullTime.home }} - {{
-                        match.score.fullTime.away }}</span>
-                    <span *ngIf="match.score.fullTime.home === null"></span>
-                </div>
-
-                <div class="team-crests">
-                    <img [src]="match.homeTeam.crest" alt="{{ match.homeTeam.name }}" width="30">
-                    <img [src]="match.awayTeam.crest" alt="{{ match.awayTeam.name }}" width="30">
-                </div>
-            </div>
-            <hr>
-        </div>
+        </app-match-list>
     </div>
 </div>
 
 <!-- Section for Upcoming Matches -->
 <div *ngIf="selectedCategory === 'upcoming'">
     <div *ngIf="upcomingMatches$ | async as matchResponse; else loading">
-        <div *ngFor="let match of matchResponse">
-            <div class="match">
-                <h3>{{ match.competition.name }} - Matchday {{ match.matchday }}</h3>
-                <p>{{ match.area.name }} | {{ match.season.startDate | date:'yyyy' }} - {{ match.season.endDate |
-                    date:'yyyy' }}</p>
-                <p><strong>{{ match.homeTeam.name }}</strong> vs <strong>{{ match.awayTeam.name }}</strong></p>
-                <p>Status: {{ match.status }}</p>
-                <p>Match Time: {{ match.utcDate | date:'short' }}</p>
+        <app-match-list [matches]="matchResponse">
 
-                <div class="score">
-                    <span *ngIf="match.score.fullTime.home !== null">{{ match.score.fullTime.home }} - {{
-                        match.score.fullTime.away }}</span>
-                    <span *ngIf="match.score.fullTime.home === null"></span>
-                </div>
-
-                <div class="team-crests">
-                    <img [src]="match.homeTeam.crest" alt="{{ match.homeTeam.name }}" width="30">
-                    <img [src]="match.awayTeam.crest" alt="{{ match.awayTeam.name }}" width="30">
-                </div>
-            </div>
-        </div>
+        </app-match-list>
     </div>
 </div>
 
 <!-- Section for Played Matches -->
 <div *ngIf="selectedCategory === 'played'">
     <div *ngIf="playedMatches$ | async as matchResponse; else loading">
-        <div *ngFor="let match of matchResponse">
-            <div class="match">
-                <h3>{{ match.competition.name }} - Matchday {{ match.matchday }}</h3>
-                <p>{{ match.area.name }} | {{ match.season.startDate | date:'yyyy' }} - {{ match.season.endDate |
-                    date:'yyyy' }}</p>
-                <p><strong>{{ match.homeTeam.name }}</strong> vs <strong>{{ match.awayTeam.name }}</strong></p>
-                <p>Status: {{ match.status }}</p>
-                <p>Match Time: {{ match.utcDate | date:'short' }}</p>
+        <app-match-list [matches]="matchResponse">
 
-                <div class="score">
-                    <span *ngIf="match.score.fullTime.home !== null">{{ match.score.fullTime.home }} - {{
-                        match.score.fullTime.away }}</span>
-                    <span *ngIf="match.score.fullTime.home === null"></span>
-                </div>
+        </app-match-list>
+    </div>
+</div>
 
-                <div class="team-crests">
-                    <img [src]="match.homeTeam.crest" alt="{{ match.homeTeam.name }}" width="30">
-                    <img [src]="match.awayTeam.crest" alt="{{ match.awayTeam.name }}" width="30">
-                </div>
-            </div>
-        </div>
+<!-- Section for Played Matches -->
+<div *ngIf="selectedCategory === 'standings'">
+    <div *ngIf="standings$ | async as standings; else loading">
+        <app-table [table]="standings.standings">
+
+        </app-table>
     </div>
 </div>
 
