--- a/FootballScoreClient/FootballScoreClient/src/app/shared/table/table.component.html
+++ b/FootballScoreClient/FootballScoreClient/src/app/shared/table/table.component.html
@@ -1,1 +1,47 @@
-<p>table works!</p>
+<div class="standings-container">
+  <h1>League Standings</h1>
+
+  <div *ngFor="let standing of standings">
+    <div class="standings-group">
+      <h2>
+        {{ standing.stage }} - {{ standing.type }} - Group: {{ standing.group }}
+      </h2>
+
+      <table class="standings-table">
+        <thead>
+          <tr>
+            <th>Position</th>
+            <th>Team</th>
+            <th>Played</th>
+            <th>Won</th>
+            <th>Draw</th>
+            <th>Lost</th>
+            <th>Points</th>
+            <th>Goals For</th>
+            <th>Goals Against</th>
+            <th>Goal Difference</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let team of standing.table">
+            <td>{{ team.position }}</td>
+            <td><img
+                [src]="team.team.crest"
+                alt="{{ team.team.name }}"
+                width="30"/>
+              {{ team.team.name }}
+            </td>
+            <td>{{ team.playedGames }}</td>
+            <td>{{ team.won }}</td>
+            <td>{{ team.draw }}</td>
+            <td>{{ team.lost }}</td>
+            <td>{{ team.points }}</td>
+            <td>{{ team.goalsFor }}</td>
+            <td>{{ team.goalsAgainst }}</td>
+            <td>{{ team.goalDifference }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
