--- a/FootballScoreClient/FootballScoreClient/src/app/pages/home-page/home-page.component.scss
+++ b/FootballScoreClient/FootballScoreClient/src/app/pages/home-page/home-page.component.scss
@@ -1,16 +1,12 @@
-.match {
-    margin-bottom: 20px;
-  }
-  
-  .team-crests img {
-    margin-right: 10px;
-  }
-  
   h3 {
     font-size: 1.5em;
   }
-  
+
   p {
     font-size: 1em;
   }
-  
+
+  .home-page {
+    height: calc(100vh - 7rem);
+    overflow-y: auto;
+  }
