--- a/FootballScoreClient/FootballScoreClient/src/app/shared/table/table.component.scss
+++ b/FootballScoreClient/FootballScoreClient/src/app/shared/table/table.component.scss
@@ -1,38 +1,42 @@
 .standings-container {
-    padding: 20px;
-    font-family: Arial, sans-serif;
-  }
-  
-  .standings-group {
-    margin-bottom: 20px;
-  }
-  
-  .standings-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 10px;
-  }
-  
-  .standings-table th, .standings-table td {
-    padding: 8px;
-    text-align: center;
-    border: 1px solid #ddd;
-  }
-  
-  .standings-table th {
-    background-color: #f4f4f4;
-  }
-  
-  .standings-table td {
-    background-color: #fafafa;
-  }
-  
-  .standings-table tr:nth-child(even) td {
-    background-color: #f9f9f9;
-  }
-  
-  h1 {
-    text-align: center;
-    color: #333;
-  }
-  
+  padding: 20px;
+  font-family: Arial, sans-serif;
+}
+
+.standings-group {
+  margin-bottom: 20px;
+}
+
+.standings-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+
+.standings-table th,
+.standings-table td {
+  padding: 8px;
+  text-align: center;
+  border: 1px solid #ddd;
+}
+
+.standings-table th {
+  background-color: #f4f4f4;
+}
+
+.standings-table td {
+  background-color: #fafafa;
+}
+
+.standings-table tr:nth-child(even) td {
+  background-color: #f9f9f9;
+}
+
+h1 {
+  text-align: center;
+  color: #333;
+}
+
+.crestAndNameColumn {
+  display: flex;
+}
