--- a/FootballScoreClient/FootballScoreClient/src/app/pages/match-page/match-page.component.html
+++ b/FootballScoreClient/FootballScoreClient/src/app/pages/match-page/match-page.component.html
@@ -10,7 +10,7 @@
             <a [routerLink]="['/team', match.homeTeam.id]">
                 <img [src]="match.homeTeam.crest" alt="{{ match.homeTeam.name }}" width="30">
             </a>
-            <a [routerLink]="['/team', match.homeTeam.id]">
+            <a [routerLink]="['/team', match.awayTeam.id]">
                 <img [src]="match.awayTeam.crest" alt="{{ match.awayTeam.name }}" width="30">
             </a>
         </div>
