authorization med interceptor

--- a/FootballScoreClient/FootballScoreClient/src/app/app.component.html
+++ b/FootballScoreClient/FootballScoreClient/src/app/app.component.html
@@ -1,2 +1,12 @@
+<!-- Kollar om användaren är inloggad -->
+<div *ngIf="authService.currentUserSignal() === null">
+    <a routerLink="/login">Login</a>
+    <a routerLink="/register">Register</a>
+</div>
+
+<div *ngIf="authService.currentUserSignal()">
+    {{authService.currentUserSignal()?.refreshToken}}
+    <span (clisk)="logout()">Logout</span>
+</div>
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
