--- a/FootballScoreClient/FootballScoreClient/src/app/pages/login-page/login-page.component.html
+++ b/FootballScoreClient/FootballScoreClient/src/app/pages/login-page/login-page.component.html
@@ -1,1 +1,16 @@
-<p>login-page works!</p>
+<h1>Login</h1>
+
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <div>
+        <input type="text" placeholder="Username" formControlName="username"/>
+    </div>
+    <div>
+        <input type="password" placeholder="Password" formControlName="password"/>
+    </div>
+    <div>
+        <button type="submit">Sign in</button>
+    </div>
+
+</form>
+
+<span (click)="authorize()">AUTH</span>
