--- a/FootballScoreClient/FootballScoreClient/src/app/pages/register-page/register-page.component.html
+++ b/FootballScoreClient/FootballScoreClient/src/app/pages/register-page/register-page.component.html
@@ -1,23 +1,30 @@
 <h1>Register</h1>
 
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div>
-        <input type="text" placeholder="First name" formControlName="firstName"/>
-    </div>
-    <div>
-        <input type="text" placeholder="Last name" formControlName="lastName"/>
-    </div>
-    <div>
-        <input type="text" placeholder="Username" formControlName="username"/>
-    </div>
-    <div>
-        <input type="password" placeholder="Password" formControlName="password"/>
-    </div>
-    <div>
-        <input type="password" placeholder="Confirm Password" formControlName="confirmPassword"/>
-    </div>
-    <div>
-        <button type="submit">Sign Up</button>
-    </div>
-
+  <div>
+    <input type="text" placeholder="First name" formControlName="firstName" />
+  </div>
+  <div>
+    <input type="text" placeholder="Last name" formControlName="lastName" />
+  </div>
+  <div>
+    <input type="text" placeholder="Username" formControlName="username" />
+  </div>
+  <div>
+    <input type="password" placeholder="Password" formControlName="password" />
+  </div>
+  <div>
+    <input
+      type="password"
+      placeholder="Confirm Password"
+      formControlName="confirmPassword"
+    />
+  </div>
+  <div>
+    <button type="submit">Sign Up</button>
+  </div>
 </form>
+
+<span>
+  <button (click)="this.router.navigateByUrl('/login')">Already registered?</button>
+</span>
