Skicka user till klienten

--- a/FootballScoreClient/FootballScoreClient/src/app/features/navbar/navbar.component.html
+++ b/FootballScoreClient/FootballScoreClient/src/app/features/navbar/navbar.component.html
@@ -18,7 +18,7 @@
 
     <div *ngIf="authService.currentUserSignal() as user">
         <div>
-          Inloggad som {{ user.accessToken }}
+          Inloggad som {{ user.username }}
           <button (click)="logout()">Logout</button>
         </div>
       </div>
