--- a/FootballScoreClient/FootballScoreClient/src/app/features/navbar/navbar.component.scss
+++ b/FootballScoreClient/FootballScoreClient/src/app/features/navbar/navbar.component.scss
@@ -4,3 +4,15 @@
     justify-content: space-around;
     border-bottom: 1px solid black;
 }
+
+:host {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: white; /* eller annan färg */
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* valfritt, för att skilja navbaren tydligare */
+  }
+  
+  
