startat processen att få felmeddelande baserat på validering i klienten

--- a/FootballScoreClient/FootballScoreClient/src/app/pages/login-page/login-page.component.html
+++ b/FootballScoreClient/FootballScoreClient/src/app/pages/login-page/login-page.component.html
@@ -15,3 +15,7 @@
 <span>
   <button (click)="this.router.navigateByUrl('/register')">No Account?</button>
 </span>
+
+<ul *ngIf="apiErrors.length > 0">
+  <li *ngFor="let err of apiErrors">{{ err }}</li>
+</ul>
