testing follow function but not working yet

--- a/FootballScoreClient/FootballScoreClient/src/app/layouts/main-layout/main-layout.component.html
+++ b/FootballScoreClient/FootballScoreClient/src/app/layouts/main-layout/main-layout.component.html
@@ -1,4 +1,6 @@
-<app-navbar></app-navbar>
+<div class="app-navbar">
+  <app-navbar></app-navbar>
+</div>
 <div class="router-content">
   <router-outlet></router-outlet>
 </div>
