--- a/FootballScoreClient/FootballScoreClient/src/app/features/navbar/navbar.component.html
+++ b/FootballScoreClient/FootballScoreClient/src/app/features/navbar/navbar.component.html
@@ -1,26 +1,22 @@
 <div class="main">
-    
-    <div>
-        <nav>
-            <a routerLink="/home">Home</a>
-        </nav>
-    </div>
-    
-    <div>
-        <nav>
-            <a routerLink="/leagues">Leagues</a>
-        </nav>
-    </div>
+  <div>
+    <nav>
+      <a routerLink="/home">Home</a>
+    </nav>
+  </div>
 
-    <div>
-        News
-    </div>
+  <div>
+    <nav>
+      <a routerLink="/leagues">Leagues</a>
+    </nav>
+  </div>
 
-    <div *ngIf="authService.currentUserSignal() as user">
-        <div>
-          Inloggad som {{ user.username }}
-          <button (click)="logout()">Logout</button>
-        </div>
-      </div>
-      
+  <div>News</div>
+
+  <div *ngIf="authService.currentUserSignal() as user">
+    <div>
+      Inloggad som {{ user.username }}
+      <button (click)="logout()">Logout</button>
+    </div>
+  </div>
 </div>
